# zaw

./: .gitignore  README.md  package-lock.json  package.json  readme.md  vitest.browser.config.ts  vitest.config.ts
.github/workflows/: ci-build-rust.yml  ci-build-zig-0_15.yml  ci-build-zig-master.yml  ci-build-zig.yml  ci.yml  lint.yml  test-typescript.yml  test.yml  zig-release.yml
docs/: benchmarks.md  contributing.md  getting-started.md  protocol-conduit.md  protocol-interop.md  publishing.md
examples/host-typescript/: host.ts
examples/host-typescript/__tests__/: builds.ts  example.bench.ts  example.browser.test.ts  example.test.ts
examples/utils/: index.ts
examples/wasm-rust/: Cargo.toml  build.sh  index.ts
examples/wasm-rust-bindgen/: Cargo.toml  build.sh  index.ts  lib.rs
examples/wasm-rust-bindgen/__tests__/: module.test.ts
examples/wasm-rust/__tests__/: bindgen.test.ts
examples/wasm-rust/api_bindgen/: Cargo.toml  build.sh  index.ts  lib.rs
examples/wasm-rust/api_zaw/: Cargo.toml  build.sh  lib.rs
examples/wasm-rust/shared/: Cargo.toml  lib.rs
examples/wasm-zig/: build.sh  build.zig  build.zig.zon  main.zig
implementations/host-typescript/: .npmignore  README.md  conduit.test.ts  conduit.ts  constants.ts  interop.ts  package-lock.json  package.json  readme.md  tsconfig.json  tsup.config.ts
implementations/host-typescript/src/: binding.ts  conduit.test.ts  conduit.ts  constants.ts  index.ts  interop.ts  types.ts
implementations/wasm-rust/: Cargo.toml  README.md  lib.rs  readme.md
implementations/wasm-rust/conduit/: mod.rs  test.rs
implementations/wasm-rust/interop/: error.rs  externs.rs  log.rs  mod.rs
implementations/wasm-zig/: build.zig  build.zig.zon  conduit.zig  interop.zig  simd.zig  zaw.zig
implementations/wasm-zig/conduit/: conduit.test.zig  conduit.zig
scripts/: build-all.sh  build-rust.sh  build-ts.sh  build-zig.sh  install-rust.sh  install-zig.sh  install.sh  test-rust.sh  test-zig.sh
test-gen/: generate.ts  test-cases.ts  types.ts
test-gen/languages/: rust.ts  typescript.ts  zig.ts
(+8 files in other folders)
