[package]
name = "zaw"
version = "0.0.3"
edition = "2021"
description = "Zero-allocation WebAssembly communication protocol for Rust"
license = "Apache-2.0"
repository = "https://github.com/stylearcade/zaw"
homepage = "https://github.com/stylearcade/zaw"
documentation = "https://docs.rs/zaw"
keywords = ["webassembly", "wasm", "zero-allocation", "performance", "interop"]
categories = ["api-bindings", "wasm", "no-std"]
readme = "README.md"
authors = ["tristanhoy"]

[lib]
crate-type = ["rlib", "cdylib"]
path = "lib.rs"

[dependencies]
