[package]
name = "wasm_api_bindgen"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "./lib.rs"

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
shared = { path = "../shared" }

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--enable-simd"]
